// SPDX-License-Identifier: LGPL-2.1-or-later
// Copyright (C) 2025 Shahzad A. Bhatti <bhatti@plexobject.com>
//
// This file is part of PlexSpaces.
//
// PlexSpaces is free software: you can redistribute it and/or modify
// it under the terms of the GNU Lesser General Public License as published by
// the Free Software Foundation, either version 2.1 of the License, or
// (at your option) any later version.
//
// PlexSpaces is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU Lesser General Public License for more details.
//
// You should have received a copy of the GNU Lesser General Public License
// along with PlexSpaces. If not, see <https://www.gnu.org/licenses/>.

//! Comprehensive tests for application deployment/undeployment with supervisor hierarchy
//!
//! Tests cover:
//! - Application deployment triggers supervisor/actor hierarchy startup
//! - Application undeployment triggers graceful shutdown of hierarchy
//! - Supervisor hierarchy startup with bottom-up ordering
//! - Supervisor hierarchy shutdown with top-down ordering
//! - Monitoring/linking during deployment lifecycle
//! - ApplicationSpec/ChildSpec validation
//! - Rollback on deployment failure
//! - All scenarios with production-grade observability

use plexspaces_node::Node;
use plexspaces_proto::application::v1::{
    ApplicationSpec, ApplicationType, SupervisorSpec, ChildSpec, ChildType,
    SupervisionStrategy, RestartPolicy,
};
use plexspaces_proto::node::v1::ReleaseSpec;
use std::sync::Arc;
use tokio::time::{sleep, Duration};

/// Test: Application deployment creates and starts supervisor hierarchy
#[tokio::test]
async fn test_deployment_starts_supervisor_hierarchy() {
    // This test verifies that when an application is deployed:
    // 1. Supervisor hierarchy is created from ApplicationSpec
    // 2. Supervisors are started in bottom-up order
    // 3. Actors are started after their supervisors
    // 4. All links/monitors are established
    // 5. Metrics are recorded
    
    // Implementation needed: Create node, deploy application with supervisor spec,
    // verify hierarchy is started correctly
}

/// Test: Application undeployment gracefully shuts down supervisor hierarchy
#[tokio::test]
async fn test_undeployment_shuts_down_hierarchy() {
    // This test verifies that when an application is undeployed:
    // 1. Supervisors are stopped in top-down order
    // 2. Actors are stopped with their shutdown specs
    // 3. Links/monitors are cleaned up
    // 4. Metrics are recorded
    
    // Implementation needed: Deploy application, then undeploy,
    // verify graceful shutdown
}

/// Test: ApplicationSpec validation
#[tokio::test]
async fn test_application_spec_validation() {
    // Test validation of:
    // - Required fields (name, version)
    // - Valid ApplicationType
    // - Valid SupervisorSpec
    // - Valid ChildSpecs
}

/// Test: ChildSpec validation
#[tokio::test]
async fn test_child_spec_validation() {
    // Test validation of:
    // - Required fields (id, type, start_module)
    // - Valid ChildType
    // - Valid RestartPolicy
    // - Valid ShutdownSpec
}

/// Test: Deployment with nested supervisor hierarchy
#[tokio::test]
async fn test_deployment_nested_supervisor_hierarchy() {
    // Test deployment with 3-level hierarchy:
    // Root Supervisor -> Mid Supervisor -> Worker Actor
    // Verify bottom-up startup and top-down shutdown
}

/// Test: Deployment rollback on supervisor startup failure
#[tokio::test]
async fn test_deployment_rollback_on_failure() {
    // Test that if supervisor hierarchy fails to start:
    // 1. Already started supervisors/actors are rolled back
    // 2. Application is not marked as running
    // 3. Error is properly reported
}

/// Test: Undeployment with shutdown timeout
#[tokio::test]
async fn test_undeployment_shutdown_timeout() {
    // Test that undeployment respects shutdown timeouts:
    // 1. Graceful shutdown with timeout
    // 2. Brutal kill if timeout exceeded
    // 3. Metrics for timeout events
}

/// Test: Deployment with monitoring/linking
#[tokio::test]
async fn test_deployment_with_monitoring_linking() {
    // Test that during deployment:
    // 1. Supervisors monitor their children
    // 2. Supervisors link to their children
    // 3. Links are cleaned up on undeployment
}

/// Test: Multiple application deployment with dependencies
#[tokio::test]
async fn test_multiple_applications_with_dependencies() {
    // Test deploying multiple applications with dependencies:
    // 1. Dependencies start first (topological sort)
    // 2. Each application's supervisor hierarchy starts correctly
    // 3. Undeployment stops in reverse dependency order
}

/// Test: ApplicationSpec with invalid supervisor spec fails
#[tokio::test]
async fn test_invalid_supervisor_spec_fails() {
    // Test that invalid supervisor specs are rejected:
    // - Empty child IDs
    // - Invalid restart policies
    // - Invalid supervision strategies
}

/// Test: ChildSpec with invalid configuration fails
#[tokio::test]
async fn test_invalid_child_spec_fails() {
    // Test that invalid child specs are rejected:
    // - Empty start_module
    // - Invalid child types
    // - Invalid shutdown specs
}


